--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@highcharts/map-collection": "^2.2.0",
+    "@mui/material": "^6.1.1",
+    "@mui/x-data-grid": "^7.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +15,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
@@ -20,8 +24,10 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.14.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
