--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@highcharts/map-collection": "^2.2.0",
-    "@mui/material": "^6.1.1",
+    "@mui/material": "^6.1.4",
     "@mui/x-data-grid": "^7.18.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.7",
@@ -24,6 +24,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "feather-icons-react": "^0.7.0",
+    "feathericon": "^1.0.2",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
     "history": "^5.3.0",
@@ -33,9 +35,11 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-feather": "^2.0.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.3",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.14.1",
