--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "date-fns": "^4.1.0",
     "feather-icons-react": "^0.7.0",
     "feathericon": "^1.0.2",
-    "highcharts": "^11.4.6",
+    "highcharts": "^11.4.8",
+    "highcharts-pattern-fill": "^3.0.3",
     "highcharts-react-official": "^3.2.1",
     "history": "^5.3.0",
     "lucide-react": "^0.447.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
