--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "highcharts-pattern-fill": "^3.0.3",
     "highcharts-react-official": "^3.2.1",
     "history": "^5.3.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.447.0",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
@@ -37,6 +38,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
