--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@highcharts/map-collection": "^2.2.0",
-    "@mui/material": "^6.1.4",
+    "@mui/material": "^6.4.8",
     "@mui/x-data-grid": "^7.18.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.7",
@@ -79,6 +79,7 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/material-ui": "^0.21.18",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "shadcn-ui": "^0.9.2",
